testdata/baselines/reference/submodule/conformance/parserStatementIsNotAMemberVariableDeclaration1(alwaysstrict=true).errors.txt
parserStatementIsNotAMemberVariableDeclaration1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.
parserStatementIsNotAMemberVariableDeclaration1.ts(6,5): error TS1212: Identifier expected. 'private' is a reserved word in strict mode.


==== parserStatementIsNotAMemberVariableDeclaration1.ts (2 errors) ====
    return {
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
    
      "set": function (key, value) {
    
        // 'private' should not be considered a member variable here.
        private[key] = value;
        ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode.
    
      }
    
    };